July 25 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* A really bad memory leak corrected: materials were never destroyed. I'm bottomlessly
	  ashamed!
	* The Ferocius Luxification Bug fixed
	* level::Luxify() renamed as level::FiatLux()
	* Slot donations work again, maybe
	* Danger system is really mad

July 25 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Flaming sword added

July 24 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added special flame effect to bitmaps
	* Added flames to bananas ;)

July 24 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Single weapon skill's LevelDownMessage is now printed correctly when the item is
	  wielded
	* Doubled all dodge values
	* Added "character defence values" option to SecretKnowledge
	* SecretKnowledge now writes the shown information to a file afterwards
	* Added CreateSolidMaterialConfigurations character database boolean that can be
	  used to easily add golem-like monsters
	* SecretKnowledge now shows all possible golems as separate entries
	* Attack info of nonliving bodyparts is calculated correctly at last
	* Strength no longer affects THV, as it made golems far too powerful
	* Halved the AP cost of biting

July 24 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* void globalwindowhandler::UpdateTick() changed to return Tick

July 23 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Wishing for "ring of teleport" now works
	* The game now asks whether one wants to remove saves when quitting in WMode
	* Real save is now removed and autosave is done when WMode is activated, to prevent
	  the potential abuse of the latter

July 23 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* The number of BodyParts and AllowedWeaponSkillCategories cached
	* Some S&R done:
	  * Description() -> GetDescription()
	  * PersonalPronoun() -> GetPersonalPronoun()
	  * PossessivePronoun() -> GetPossessivePronoun()
	  * ObjectPronoun() -> GetObjectPronoun()