@@ -39,11 +39,12 @@ Skeletons are probably seen by infravision.
 //Teleportation in Attnam bugs.
 Corpse + loricatus.
 Chests and lanterns.
-Visual bugs with close in Linux with the X-button.
+//Visual bugs with close in Linux with the X-button.
 Unicorns can eat silver stones.
 Exp is gained even if bodypart is non-living, even though it affects nothing.
-One can kick mines.
+//One can kick mines.
 new meleeweapon(LONGSWORD, MAKE_MATERIAL(IRON)) may create a long iron sword with a mithril handle.
-Doors close when they break.
+//Doors close when they break.
 Can one block when fainted?
+Wand of resurrection doesn't work
 DonateSlotTo bugs.
