@@ -1,3 +1,9 @@
+July 25 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Doors stay closed if closed when broken
+	* Visual bugs with close in Linux with the X-button corrected
+	* Skeletons now drop bones instead of bodyparts
+	
 July 25 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* A really bad memory leak corrected: materials were never destroyed. I'm bottomlessly
